pubish zookeeper-operator-v0.1.1

--- a/charts/zookeeper-operator/templates/rbac.yaml
+++ b/charts/zookeeper-operator/templates/rbac.yaml
@@ -52,6 +52,12 @@ rules:
   verbs:
   - "*"
 - apiGroups:
+  - coordination.k8s.io
+  resources:
+  - leases
+  verbs:
+  - "*"
+- apiGroups:
   - zookeeper.example.com
   resources:
   - "*"
